<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bottom_sheet_background"
    android:orientation="vertical">

    <com.google.android.material.bottomsheet.BottomSheetDragHandleView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"/>

    <TextView
        android:id="@+id/tv_rename_project"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/vcode_rename_project"
        android:textAppearance="@style/TextAppearance.Material3.TitleLarge"
        android:layout_marginStart="@dimen/vcode_app_gap_horizontal"
        android:layout_marginEnd="0dp"/>

    <TextView
        android:id="@+id/tv_project_name_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/project_name"
        android:layout_marginTop="24dp"
        android:textAppearance="@style/TextAppearance.Material3.LabelSmall"
        android:textColor="?attr/colorOnSurfaceVariant"
        android:layout_marginStart="@dimen/vcode_app_gap_horizontal"
        android:layout_marginEnd="0dp"/>

    <EditText
        android:id="@+id/et_project_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/e_g_my_awesome_project"
        android:imeOptions="actionDone"
        android:importantForAutofill="no"
        android:padding="14dp"
        android:layout_marginTop="6dp"
        android:layout_marginHorizontal="@dimen/vcode_app_gap_horizontal"
        android:inputType="text"
        android:maxLines="1"
        android:textColor="?attr/colorOnSurface"
        android:textColorHint="?attr/colorOnSurfaceVariant"
        android:background="?attr/colorSurfaceContainerHigh"
        android:textAppearance="@style/TextAppearance.Material3.LabelMedium" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_rename_project"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginStart="0dp"
        android:layout_marginBottom="20dp"
        android:paddingHorizontal="24dp"
        android:layout_marginEnd="@dimen/vcode_app_gap_horizontal"
        android:layout_gravity="end"
        android:text="@string/vcode_action_rename"
        android:textAppearance="@style/TextAppearance.Material3.LabelSmall"
        android:textColor="?attr/colorOnPrimary"
        app:backgroundTint="?attr/colorPrimary" />
</LinearLayout>